--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
+        "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "laravolt/avatar": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
